[gd_scene load_steps=6 format=2]

[ext_resource path="res://font/Akira Expanded Demo.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/script/HUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="InputEventAction" id=2]
action = "ui_accept"

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 21.3213
margin_bottom = 89.3213
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -36.0
margin_bottom = -2.0
custom_fonts/font = SubResource( 1 )
text = "Wasted in outta space"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -104.0
margin_top = -264.0
margin_right = 96.0
margin_bottom = -213.0
custom_fonts/font = SubResource( 1 )
shortcut_in_tooltip = false
shortcut = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AmmoCount" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -44.0
margin_right = 163.0
custom_fonts/font = SubResource( 1 )
text = "ammo: "
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_Message_Timer_timeout"]
